--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
 </head>
-<body id="body" class="dark-sidebar">
+<body id="body enlarge-menu" class="dark-sidebar">
   <app-root></app-root>
   <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/libs/simplebar/simplebar.min.js"></script>
