FIX: Colors and sidebar to-hiddden button

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Comercio Local Admin</title>
@@ -11,7 +12,8 @@
   <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
   <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
 </head>
-<body id="body enlarge-menu" class="dark-sidebar">
+
+<body id="body" class="dark-sidebar menuitem-active enlarge-menu">
   <app-root></app-root>
   <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/libs/simplebar/simplebar.min.js"></script>
@@ -21,4 +23,5 @@
   <!-- App js -->
   <script src="assets/js/app.js"></script>
 </body>
+
 </html>
