--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
   <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/libs/simplebar/simplebar.min.js"></script>
   <script src="assets/libs/feather-icons/feather.min.js"></script>
-  <script src="assets/libs/apexcharts/apexcharts.min.js"></script>
-  <script src="assets/js/pages/analytics-index.init.js"></script>
+  <!-- <script src="assets/libs/apexcharts/apexcharts.min.js"></script> -->
+  <!-- <script src="assets/js/pages/analytics-index.init.js"></script> -->
   <!-- App js -->
   <script src="assets/js/app.js"></script>
 </body>
