--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,25 @@
   <meta charset="utf-8">
   <title>Comercio Local Admin</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/logos/icon.png">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1">
+  <link rel="icon"
+    type="image/x-icon"
+    href="assets/images/logos/icon.png">
   <!-- App css -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-  <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
+  <link href="assets/css/bootstrap.min.css"
+    rel="stylesheet"
+    type="text/css" />
+  <link href="assets/css/icons.min.css"
+    rel="stylesheet"
+    type="text/css" />
+  <link href="assets/css/app.min.css"
+    rel="stylesheet"
+    type="text/css" />
 </head>
 
-<body id="body" class="dark-sidebar menuitem-active enlarge-menu" >
+<body id="body"
+  class="dark-sidebar menuitem-active enlarge-menu">
   <app-root></app-root>
   <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/libs/simplebar/simplebar.min.js"></script>
